<resources>
    <string name="app_name">Prazska litacka - mobile</string>
    <string name="racer_name_label">Name of racer</string>
    <string name="racer_name_value">Pepa Novak</string>
    <string name="racer_id_label">Number of racer</string>
    <string name="racer_id_value">00</string>
    <string name="btn_add_row">Add</string>
    <string name="points_total_label">Points total</string>
    <string name="points_total_value">0</string>
    <string name="bonus_stations_number_label">Bonus stations visited</string>
    <string name="bonus_stations_number_value">0/0</string>
    <string name="bonus_lines_number_label">Bonus lines visited</string>
    <string name="bonus_lines_number_value">0/0</string>
    <string name="btn_end_race">End Race</string>
    <string name="from_label">Fr:</string>
    <string name="from_hint">Starting station</string>
    <string name="to_label">To:</string>
    <string name="to_hint">Ending station</string>
    <string name="line_label">Line</string>
    <string name="line_hint">Number of line</string>
    <string name="checkbox_nonstandard_line">Was line nonstandard</string>
    <string name="nonstandard_line_description_hint">Briefly describe diversion</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="zero_digit">0</string>
</resources>