<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/user_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/racer_name_label"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:text="@string/racer_name_label"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/racer_name_value"
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                android:text="@string/racer_name_value"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/racer_id_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/racer_id_label"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/racer_id_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/racer_id_value"
                android:textSize="16sp"
                android:textStyle="bold" />

        </TableRow>

    </TableLayout>

    <ListView
        android:id="@+id/race_row_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TableLayout
        android:id="@+id/points_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/points_total_label"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:text="@string/points_total_label"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/points_total_value"
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                android:text="@string/points_total_value"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/bonus_stations_number_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bonus_stations_number_label"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bonus_stations_number_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bonus_stations_number_value"
                android:textSize="16sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/bonus_lines_number_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bonus_lines_number_label"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bonus_lines_number_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bonus_lines_number_value"
                android:textSize="16sp"
                android:textStyle="bold" />

        </TableRow>
    </TableLayout>

</androidx.appcompat.widget.LinearLayoutCompat>